# neorv32-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
neorv32/: Cargo.toml  README.md
neorv32-rt/: Cargo.toml  README.md  build.rs  crt0.S
neorv32-rt/.cargo/: config.toml
neorv32-rt/examples/: extern.rs
neorv32-rt/src/: lib.rs
neorv32-sys/: Cargo.toml  LICENSE  README.md  build.rs
neorv32-sys/examples/: hello.rs
neorv32-sys/src/: lib.rs
