[package]
authors = ["Berkay Dinç <berkayydinc@gmail.com>"]
description = "Low-level bindings for NEORV32 HAL and library."
repository = "https://github.com/brkydnc/neorv32-rs"
homepage = "https://github.com/brkydnc/neorv32-rs"
name = "neorv32-sys"
license-file = "LICENSE"
readme = "README.md"
version = "0.1.0"
edition = "2024"
categories = ["no-std", "external-ffi-bindings"]
keywords = ["neorv32", "riscv", "bindings", "ffi", "hardware-support"]
exclude = [
    "neorv32/",
    "!neorv32/LICENSE",
    "!neorv32/sw/lib/**/*",
]

[dependencies]

[build-dependencies]
bindgen = "0.71.1"
cc = { version = "1.2.16", features = ["parallel"] }
