[package]
authors = ["Berkay Dinç <berkayydinc@gmail.com>"]
description = "High-level bindings for NEORV32 HAL and library."
repository = "https://github.com/brkydnc/neorv32-rs"
homepage = "https://github.com/brkydnc/neorv32-rs"
name = "neorv32"
license-file = "LICENSE"
readme = "README.md"
version = "0.1.0"
edition = "2024"
categories = ["no-std", "external-ffi-bindings"]
keywords = ["neorv32", "riscv", "hardware-support", "api-bindings", "embedded"]


[dependencies]
neorv32-sys = { version = "0.1.0", path = "../neorv32-sys" }
