[package]
authors = ["Berkay Dinç <berkayydinc@gmail.com>"]
description = "High-level bindings for NEORV32 HAL and library."
repository = "https://github.com/brkydnc/neorv32-rs"
homepage = "https://github.com/brkydnc/neorv32-rs"
name = "neorv32"
license-file = "LICENSE"
readme = "README.md"
version = "0.1.0"
edition = "2024"
categories = ["no-std", "hardware-support", "api-bindings", "embedded"]
keywords = ["neorv32", "riscv"]


[dependencies]
neorv32-sys = { version = "0.1.0", path = "../neorv32-sys" }
